--- a/package.json
+++ b/package.json
@@ -1,38 +1,55 @@
 {
-  "name": "chaosbay",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "chaosbay",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@emotion/core": "^11.0.0",
+        "@emotion/react": "^11.0.0",
+        "@testing-library/jest-dom": "^5.11.4",
+        "@testing-library/react": "^11.1.0",
+        "@testing-library/user-event": "^12.1.10",
+        "autoprefixer": "^10.0.2",
+        "cloudinary-react": "^1.6.8",
+        "customize-cra": "^1.0.0",
+        "gsap": "^3.5.1",
+        "postcss": "^8.1.6",
+        "postcss-cli": "^8.2.0",
+        "react": "^17.0.1",
+        "react-app-rewired": "^2.1.6",
+        "react-dom": "^17.0.1",
+        "react-icons": "^3.11.0",
+        "react-player": "^2.7.0",
+        "react-scripts": "4.0.0",
+        "simple-react-lightbox": "^3.3.4-2",
+        "tailwindcss": "^1.9.6",
+        "web-vitals": "^0.2.4"
+    },
+    "scripts": {
+        "start": "react-app-rewired start",
+        "build": "react-app-rewired build",
+        "test": "react-app-rewired test",
+        "eject": "react-app-rewired eject",
+        "build:css": "postcss tailwind.css -o src/tailwind.css"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@emotion/babel-preset-css-prop": "^11.0.0"
+    }
 }
